add atomic purchase receiving
